[package]
name = "packets-are-structs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-bytes = "0.2.0"
macaddr = "1.0.1"
packed_struct = "0.10.0"

[dev-dependencies]
anyhow = "1.0.45"
pcap-file = "1.1.1"
