[package]
name = "packets-are-structs"
version = "0.1.0"
edition = "2021"
description = "Representing packets as rust structs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
as-bytes = "0.2.0"
byteorder = "1.4.3"
internet-checksum = "0.2.1"
macaddr = "1.0.1"
packed_struct = "0.10.0"

[dev-dependencies]
anyhow = "1.0.45"
etherparse = "0.10.1"
pcap-file = "1.1.1"
